manifests/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: case11eks-workload
  labels: 
    app: nginx
spec:
  replicas: 1 #min\max available
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccount: nginx-user
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          requests:
            cpu: "0.5" 
            memory: "128Mi"
          limits:
            cpu: "1"
            memory: "256Mi"
        ports:
        - containerPort: 80
      readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
