manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: case11eks-workload
  labels: 
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
